src/main/java/com/example/nbd/exceptions/invalidParametersExceptions/CantUpdateRentException.java
package com.example.nbd.exceptions.invalidParametersExceptions;

public class CantUpdateRentException extends InvalidParametersException {
    public CantUpdateRentException() {
        super("Can't update rent");
    }
}
